@@ -8,7 +8,7 @@ use List::MoreUtils ();
 use Role::Tiny::With;
 use Scalar::Util ();
 use Specio::Library::Builtins;
-use Specio::OO qw( new _accessorize );
+use Specio::OO;
 
 use Specio::Constraint::Role::CanType;
 with 'Specio::Constraint::Role::CanType';
@@ -38,7 +38,7 @@ with 'Specio::Constraint::Role::CanType';
     sub _build_inline_generator { $_inline_generator }
 }
 
-__PACKAGE__->_accessorize();
+__PACKAGE__->_ooify();
 
 1;
 
