@@ -3,9 +3,12 @@ package Specio::OO;
 use strict;
 use warnings;
 
+use B qw( perlstring );
 use Carp qw( confess );
+use Eval::Closure qw( eval_closure );
 use Exporter qw( import );
 use Scalar::Util qw( blessed weaken );
+use mro ();
 use Specio::TypeChecks qw(
     does_role
     is_ArrayRef
@@ -18,30 +21,102 @@ use Specio::TypeChecks qw(
 );
 use Storable qw( dclone );
 
-our @EXPORT_OK = qw(
-    new
+our @EXPORT = qw(
     clone
-    _accessorize
+    _ooify
 );
 
-sub new {
+sub _ooify {
     my $class = shift;
 
-    my $p = _BUILDARGS( $class, @_ );
+    my $attrs = $class->_attrs();
+    for my $name ( sort keys %{$attrs} ) {
+        my $attr = $attrs->{$name};
 
-    my $self = bless $p, $class;
+        _inline_reader( $class, $name, $attr );
+        _inline_predicate( $class, $name, $attr );
+    }
 
-    _BUILDALL($self);
-
-    return $self;
+    _inline_constructor($class);
 }
 
-sub _BUILDARGS {
+sub _inline_reader {
+    my $class = shift;
+    my $name  = shift;
+    my $attr  = shift;
+
+    my $reader;
+    if ( $attr->{lazy} && ( my $builder = $attr->{builder} ) ) {
+        $reader = "sub { \$_[0]->{$name} ||= \$_[0]->$builder(); }";
+    }
+    else {
+        $reader = "sub { \$_[0]->{$name} }";
+    }
+
+    {
+        no strict 'refs';
+        *{ $class . '::' . $name } = eval_closure(
+            source      => $reader,
+            description => $class . '->' . $name,
+        );
+    }
+}
+
+sub _inline_predicate {
+    my $class = shift;
+    my $name  = shift;
+    my $attr  = shift;
+
+    return unless $attr->{predicate};
+
+    my $predicate = "sub { exists \$_[0]->{$name} }";
+
+    {
+        no strict 'refs';
+        *{ $class . '::' . $attr->{predicate} } = eval_closure(
+            source      => $predicate,
+            description => $class . '->' . $attr->{predicate},
+        );
+    }
+}
+
+sub _inline_constructor {
     my $class = shift;
 
-    local $Carp::CarpLevel = $Carp::CarpLevel + 1;
+    my @build_subs;
+    for my $class ( @{ mro::get_linear_isa($class) } ) {
+        {
+            no strict 'refs';
+            push @build_subs, $class . '::BUILD'
+                if defined &{ $class . '::BUILD' };
+        }
+    }
 
-    my %p = _validate_args( $class, @_ );
+    my $constructor = <<'EOF';
+sub {
+    my $class = shift;
+
+    my %p = do {
+        if ( @_ == 1 ) {
+            if ( ref $_[0] eq 'HASH' ) {
+                %{ shift() };
+            }
+            else {
+                Specio::OO::_constructor_confess(
+                    Specio::OO::_bad_args_message( $class, @_ ) );
+            }
+        }
+        else {
+            Specio::OO::_constructor_confess(
+                Specio::OO::_bad_args_message( $class, @_ ) )
+                if @_ % 2;
+            @_;
+        }
+    };
+
+    my $self = bless {}, $class;
+
+EOF
 
     my $attrs = $class->_attrs();
     for my $name ( sort keys %{$attrs} ) {
@@ -49,63 +124,78 @@ sub _BUILDARGS {
         my $key_name = $attr->{init_arg} // $name;
 
         if ( $attr->{required} ) {
-            _constructor_confess(
-                "$class->new() requires a $key_name argument.")
-                unless exists $p{$key_name};
+            $constructor .= <<"EOF";
+    Specio::OO::_constructor_confess(
+        "$class->new() requires a $key_name argument.")
+        unless exists \$p{$key_name};
+EOF
         }
 
-        if ( $attr->{builder} && !$attr->{lazy} && !exists $p{$key_name} ) {
+        if ( $attr->{builder} && !$attr->{lazy} ) {
             my $builder = $attr->{builder};
-            $p{$key_name} = $class->$builder();
+            $constructor .= <<"EOF";
+    \$p{$key_name} = $class->$builder() unless exists \$p{$key_name};
+EOF
         }
-
-        next unless exists $p{$key_name};
 
         if ( $attr->{isa} ) {
-            my $validator = __PACKAGE__->can( 'is_' . $attr->{isa} );
-            $validator ||= sub { isa_class( @_, $attr->{isa} ); };
+            my $validator;
+            if ( Specio::TypeChecks->can( 'is_' . $attr->{isa} ) ) {
+                $validator = 'Specio::TypeChecks::is_' . $attr->{isa} . "( \$p{$key_name} )";
+            }
+            else {
+                my $quoted_class = perlstring( $attr->{isa});
+                $validator = "Specio::TypeChecks::isa_class( \$p{$key_name}, $quoted_class )";
+            }
 
-            $validator->( $p{$key_name} )
-                or confess _bad_value_message(
+            $constructor .= <<"EOF";
+    if ( exists \$p{$key_name} && !$validator ) {
+        Carp::confess(
+            Specio::OO::_bad_value_message(
                 "The value you provided to $class->new() for $key_name is not a valid $attr->{isa}.",
-                $p{$key_name},
-                );
+                \$p{$key_name},
+            )
+        );
+    }
+EOF
         }
 
         if ( $attr->{does} ) {
-            does_role( $p{$key_name}, $attr->{does} )
-                or confess _bad_value_message(
+            my $quoted_role = perlstring($attr->{does});
+            $constructor .= <<"EOF";
+    if ( exists \$p{$key_name} && !Specio::TypeChecks::does_role( \$p{$key_name}, $quoted_role ) ) {
+        Carp::confess(
+            Specio::OO::_bad_value_message(
                 "The value you provided to $class->new() for $key_name does not do the $attr->{does} role.",
-                $p{$key_name},
-                );
+                \$p{$key_name},
+            )
+        );
+    }
+EOF
         }
-
-        $p{$name} = delete $p{$key_name};
 
         if ( $attr->{weak_ref} ) {
-            weaken $p{$name};
+            $constructor .= "    Scalar::Util::weaken( \$p{$key_name} );\n";
         }
+
+        $constructor .= "    \$self->{$name} = \$p{$key_name} if exists \$p{$key_name};\n";
+
+        $constructor .= "\n";
     }
 
-    return \%p;
+    $constructor .= '    $self->' . $_ . "(\\%p);\n" for @build_subs;
+    $constructor .= <<'EOF';
+
+    return $self;
 }
+EOF
 
-sub _validate_args {
-    my $class = shift;
-
-    local $Carp::CarpLevel = $Carp::CarpLevel + 1;
-
-    if ( @_ == 1 ) {
-        if ( ref $_[0] eq 'HASH' ) {
-            return %{ shift() };
-        }
-        else {
-            _constructor_confess( _bad_args_message( $class, @_ ) );
-        }
-    }
-    else {
-        _constructor_confess( _bad_args_message( $class, @_ ) ) if @_ % 2;
-        return @_;
+    {
+        no strict 'refs';
+        *{ $class . '::new' } = eval_closure(
+            source      => $constructor,
+            description => $class . '->new',
+        );
     }
 }
 
@@ -130,56 +220,6 @@ sub _bad_value_message {
           $message
         . ' You passed '
         . Devel::PartialDump->new()->dump($value);
-}
-
-sub _BUILDALL {
-    my $self = shift;
-
-    for my $class ( @{ mro::get_linear_isa( ref $self ) } ) {
-        my $build = do {
-            no strict 'refs';
-            defined &{ $class . '::BUILD' }
-                ? \&{ $class . '::BUILD' }
-                : undef;
-        };
-
-        next unless $build;
-
-        $self->$build();
-    }
-}
-
-sub _accessorize {
-    my $class = shift;
-
-    my $attrs = $class->_attrs();
-    for my $name ( sort keys %{$attrs} ) {
-        my $attr = $attrs->{$name};
-
-        my $reader;
-        if ( $attr->{lazy} && ( my $builder = $attr->{builder} ) ) {
-            $reader = sub {
-                $_[0]->{$name} ||= $_[0]->$builder();
-            };
-        }
-        else {
-            $reader = sub { $_[0]->{$name} };
-        }
-
-        unless ( $class->can($name) ) {
-            no strict 'refs';
-            *{ $class . '::' . $name } = $reader;
-        }
-
-        next unless $attr->{predicate};
-
-        my $predicate = sub { exists $_[0]->{$name} };
-
-        unless ( $class->can( $attr->{predicate} ) ) {
-            no strict 'refs';
-            *{ $class . '::' . $attr->{predicate} } = $predicate;
-        }
-    }
 }
 
 sub clone {
