@@ -2,6 +2,8 @@
 
 - Added Class::Method::Modifiers to prereqs.
 
+- Made Specio classes faster by inlining all accessors and constructors.
+
 
 0.09     2014-05-25
 
